WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213301
Added missing orientation attributes to PannerNode
https://bugs.webkit.org/show_bug.cgi?id=213301
Summary
Added missing orientation attributes to PannerNode
Clark Wang
Reported
2020-06-17 09:18:46 PDT
Added orientationX, orientationY, orientationZ to PannerNode. Set FIXMEs for removing velocity in PannerNode.
Attachments
Patch
(10.35 KB, patch)
2020-06-17 09:30 PDT
,
Clark Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Clark Wang
Comment 1
2020-06-17 09:30:05 PDT
Created
attachment 402118
[details]
Patch
Chris Dumez
Comment 2
2020-06-17 09:43:40 PDT
Comment on
attachment 402118
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402118&action=review
r=me. Patch looks good but let's hold off on committing until the feature flag is added.
> Source/WebCore/Modules/webaudio/PannerNode.cpp:79 > + // FIXME: Remove velocity from PannerNode
Once the feature flag is added in
https://bugs.webkit.org/show_bug.cgi?id=213268
, you will be able to drop velocity.
Chris Dumez
Comment 3
2020-06-17 21:16:50 PDT
Comment on
attachment 402118
[details]
Patch Clearing flags on attachment: 402118 Committed
r263199
: <
https://trac.webkit.org/changeset/263199
>
Chris Dumez
Comment 4
2020-06-17 21:16:52 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-06-17 21:17:18 PDT
<
rdar://problem/64475729
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug