Added missing orientation attributes to PannerNode https://bugs.webkit.org/show_bug.cgi?id=213301

Patch by Clark Wang <clark_wang@apple.com> on 2020-06-17
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

Re-baselined previous tests that now have passing test cases.

* web-platform-tests/webaudio/idlharness.https.window-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/pannernode-basic-expected.txt:

Source/WebCore:

Implemented orientation attributes in PannerNode interface, as per spec: https://www.w3.org/TR/webaudio/#pannernode.
Added FIXME comments for removing velocity later.

Re-baselined previous tests that now have passing test cases.

* Modules/webaudio/PannerNode.cpp:
(WebCore::PannerNode::PannerNode):
(WebCore::PannerNode::orientation const):
(WebCore::PannerNode::setOrientation):
(WebCore::PannerNode::distanceConeGain):
* Modules/webaudio/PannerNode.h:
* Modules/webaudio/PannerNode.idl:

Canonical link: https://commits.webkit.org/226121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263199 268f45cc-cd09-0410-ab3c-d52691b4dbfc